
2022-10-09  Simon Sobisch <simonsobisch@gnu.org>

	* common.c, coblocal.h: addition of COB_CORE_ON_ERROR to enable
	  auto-creation of coredumps on error, sending SIGABRT on error
	  and the option to let the OS handle signals
	* common.c (create_dumpfile): implemented COB_CORE_ON_ERROR=3
	* common.c (output_procedure_stack_entry, cob_stack_trace_internal):
	  replaced use of stdio functions by signal-safe write + memcpy

2022-10-08  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c [WITH_DB]: fixed bug #533 multiple file unlocking by
	  backport of adjusted struct indexed_file with new file_lock_set
	  from rw-branch together with related changes
	* fileio.c [WITH_DB] (unlock_file): extracted to match other functions
	* fileio.c [WITH_DB]: added extra parameters to DB_PUT, DB_GET, DB_SEQ,
	  DB_CPUT to show what is actually used
	* fileio.c: fixed some memory leaks related to filename handling
	* fileio.c (cob_file_free): file was not removed from cache which
	  led to double-free scenarios on cleanup
	* fileio.c (cob_open): fixed concattenated filenames resetting the static
	  filename buffer, leading to use-after-free later
	* fileio.c (do_acu_hyphen_translation, copy_fcd_to_file):
	  fix read of invalid data
	* intrinsic.c (split_around_t): fix read of invalid data
	* mlio.c (copy_data_as_string): new function replacing cob_strndup_void,
	  doing what the callers expect, fixing read of invalid data;
	  added missing check for its return value in is_valid_xml_name
	* mlio.c (cob_xml_generate_new): fixed memory leak when valid namespace
	  data and invalid namepace prefix is passed

2022-10-05  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (check_current_date): improved validation
	* common.c, intrinsic.c: favor strcpy, snprintf over strncpy

2022-10-04  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_stack_trace_internal, output_procedure_stack_entry):
	  use cob_frame_ext information when available to output PERFORM stack